[gd_scene load_steps=5 format=3 uid="uid://cjg3t43c8vhb8"]

[ext_resource type="Theme" uid="uid://cetodgfjvpoew" path="res://resources/ui/lavender_soda.tres" id="1_3qfae"]
[ext_resource type="Script" uid="uid://bvumyandwe76k" path="res://entities/menu/lobby_settings.gd" id="1_70fbe"]
[ext_resource type="Texture2D" uid="uid://3duxce5fktav" path="res://models/sprites/powerups/lightning.png" id="2_eyr0l"]
[ext_resource type="Texture2D" uid="uid://drb8xyjigxvjw" path="res://models/sprites/powerups/bench_press.png" id="3_ddi3g"]

[node name="LobbySettings" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_3qfae")
script = ExtResource("1_70fbe")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_right = 376.0
offset_bottom = 264.0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxLabels" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 80)
layout_mode = 2
size_flags_horizontal = 3
alignment = 1

[node name="AICountLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxLabels"]
custom_minimum_size = Vector2(240, 32)
layout_mode = 2
size_flags_horizontal = 0
text = "Number of AI Bots:"
vertical_alignment = 1

[node name="OnlineGameLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxLabels"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Online Game:"
vertical_alignment = 1

[node name="KothLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxLabels"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "King of the Hill:"
vertical_alignment = 1

[node name="PowerUpsLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxLabels"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Power Ups:"
vertical_alignment = 1

[node name="PowerUpsRateLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxLabels"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Power Up Spawn Rate:"
vertical_alignment = 1

[node name="MaxPlayerSpeedLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxLabels"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Max Player Speed:"
vertical_alignment = 1

[node name="MaxPlayerStrengthLabel" type="Label" parent="PanelContainer/HBoxContainer/VBoxLabels"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Max Player Stength:"
vertical_alignment = 1

[node name="VBoxValues" type="VBoxContainer" parent="PanelContainer/HBoxContainer"]
custom_minimum_size = Vector2(0, 80)
layout_mode = 2
size_flags_horizontal = 2
alignment = 1

[node name="AICountEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxValues"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "0"
alignment = 2
max_length = 1
virtual_keyboard_type = 2

[node name="OnlineCheckbox" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxValues"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="KothCheckbox" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxValues"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="PowerUpsCheckbox" type="CheckButton" parent="PanelContainer/HBoxContainer/VBoxValues"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="PowerUpsRateEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxValues"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "10"
alignment = 2
max_length = 2
virtual_keyboard_type = 2

[node name="MaxPlayerSpeedEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxValues"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "10"
alignment = 2
max_length = 2
virtual_keyboard_type = 2

[node name="MaxPlayerStrengthEdit" type="LineEdit" parent="PanelContainer/HBoxContainer/VBoxValues"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "10"
alignment = 2
max_length = 2
virtual_keyboard_type = 2

[node name="PowerUpContainer" type="PanelContainer" parent="."]
layout_mode = 0
offset_top = 272.0
offset_right = 376.0
offset_bottom = 392.0

[node name="VBoxContainer" type="VBoxContainer" parent="PowerUpContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="PowerUpContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
text = "Power Ups"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="PowerUpContainer/VBoxContainer"]
layout_mode = 2

[node name="PowerUpIcons" type="VBoxContainer" parent="PowerUpContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="SpeedTexture" type="TextureRect" parent="PowerUpContainer/VBoxContainer/HBoxContainer/PowerUpIcons"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("2_eyr0l")

[node name="StrengthTexture" type="TextureRect" parent="PowerUpContainer/VBoxContainer/HBoxContainer/PowerUpIcons"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
texture = ExtResource("3_ddi3g")

[node name="PowerUpButtons" type="VBoxContainer" parent="PowerUpContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
alignment = 1

[node name="SpeedCheckBox" type="CheckButton" parent="PowerUpContainer/VBoxContainer/HBoxContainer/PowerUpButtons"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="StrengthCheckBox" type="CheckButton" parent="PowerUpContainer/VBoxContainer/HBoxContainer/PowerUpButtons"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HostContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_bottom = 0.01
offset_left = 431.0
offset_right = 729.0
offset_bottom = 72.0

[node name="HostSettings" type="HBoxContainer" parent="HostContainer"]
layout_mode = 2

[node name="HostLabelsContainer" type="VBoxContainer" parent="HostContainer/HostSettings"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2

[node name="HostTypeLabel" type="Label" parent="HostContainer/HostSettings/HostLabelsContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
text = "Host Type"
vertical_alignment = 1

[node name="HostValuesContainer" type="VBoxContainer" parent="HostContainer/HostSettings"]
custom_minimum_size = Vector2(0, 32)
layout_mode = 2
size_flags_horizontal = 10

[node name="HostTypeItemList" type="ItemList" parent="HostContainer/HostSettings/HostValuesContainer"]
custom_minimum_size = Vector2(160, 64)
layout_mode = 2
item_count = 2
item_0/text = "Noray"
item_1/text = "Local Host"

[connection signal="item_selected" from="HostContainer/HostSettings/HostValuesContainer/HostTypeItemList" to="." method="_on_host_type_item_list_item_selected"]
